--- a/azcam_itl/index_ITL.html
+++ b/azcam_itl/index_ITL.html
@@ -7,10 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>AzCam Home</title>
 
-    <!-- Bootstrap -->
-    <link href="static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="shortcut icon" href="static/favicon.ico">
-    <link rel="stylesheet" type="text/css" href="static/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="shortcut icon" href="favicon.ico">
 </head>
 
 <body>
@@ -19,7 +17,7 @@
 
         <div class="card">
             <div class="card-body">
-                <h4 class="card-title">AzCam Services {{message}}</h4>
+                <h4 class="card-title">ITL AzCam Services {{message}}</h4>
                 <p>Click the links below for local azcam services. Click while holding Ctrl to open in a new tab.</p>
                 <ul class="list-group">
                     <li class="list-group-item"><a href="http://localhost:2403/status" target="_self" class="card-link">Camera Status</a></li>
