--- a/azcam_itl/index_ITL.html
+++ b/azcam_itl/index_ITL.html
@@ -17,13 +17,13 @@
 
         <div class="card">
             <div class="card-body">
-                <h4 class="card-title">ITL AzCam Services {{message}}</h4>
+                <h4 class="card-title">AzCam Services {{message}}</h4>
                 <p>Click the links below for local azcam services. Click while holding Ctrl to open in a new tab.</p>
                 <ul class="list-group">
                     <li class="list-group-item"><a href="http://localhost:2403/status" target="_self" class="card-link">Camera Status</a></li>
                     <li class="list-group-item"><a href="http://localhost:2403/exptool" target="_self" class="card-link">Exposure Tool</a></li>
                     <li class="list-group-item"><a href="http://localhost:2403/docs" target="_self" class="card-link">API documentation</a></li>
-                    <h4 class="card-title mt-2">AzCamMonitor</h4>
+                    <h4 class="card-title mt-2">AzCamMonitor Examples</h4>
                     <ul class="list-group">
                         <li class="list-group-item"><a href="http://localhost:2400" target="_self" class="card-link">AzCam Monitor</a></li>
                         <li class="list-group-item"><a href="http://localhost:2400/api/monitor/start_process?name=vatt4k" target="_self" class="card-link">Start Vatt4k</a></li>
@@ -32,9 +32,9 @@
                     <h4 class="card-title mt-2">Links</h4>
                     <p>The links below point to useful information relating to observing.</p>
                     <ul class="list-group">
-                        <li class="list-group-item"><a href="https://mplesser.github.io/azcam/" target="_self" class="card-link">AzCam Software</a></li>
-                        <li class="list-group-item"><a href="https://github.com/mplesser/focus#readme" target="_self" class="card-link">AzCam focus code</a></li>
-                        <li class="list-group-item"><a href="https://github.com/mplesser/observe#readme" target="_self" class="card-link">AzCam observe code</a></li>
+                        <li class="list-group-item"><a href="https://azcam.readthedocs.io/en/latest/" target="_self" class="card-link">AzCam Software</a></li>
+                        <li class="list-group-item"><a href="https://azcam.readthedocs.io/en/latest/tools/#focus-tool" target="_self" class="card-link">AzCam focus code</a></li>
+                        <li class="list-group-item"><a href="https://github.com/mplesser/azcam-observe#readme" target="_self" class="card-link">AzCam observe code</a></li>
                     </ul>
             </div>
         </div>
