--- a/azcam_itl/index_ITL.html
+++ b/azcam_itl/index_ITL.html
@@ -26,16 +26,16 @@
                 <h4 class="card-title">AzCam Services for ITL</h4>
                 <p>Click the links below for local azcam services. Click while holding Ctrl to open in a new tab.</p>
                 <ul class="list-group">
-                    <li class="list-group-item"><a href="http://localhost:2403/exposure" target="_self" class="card-link">Exposure Contol</a></li>
-                    <li class="list-group-item"><a href="http://localhost:2403/status" target="_self" class="card-link">Camera Status</a></li>
-                    <li class="list-group-item"><a href="http://localhost:2403/queue" target="_self" class="card-link">Queue Observing</a></li>
+                    <li class="list-group-item"><a href="http://localhost:{{webport}}/exposure" target="_self" class="card-link">Exposure Contol</a></li>
+                    <li class="list-group-item"><a href="http://localhost:{{webport}}/status" target="_self" class="card-link">Camera Status</a></li>
                     <li class="list-group-item"><a href="http://localhost:2400" target="_self" class="card-link">AzCam Monitor</a></li>
-                    <!-- <li class="list-group-item"><a href="http://localhost:2400/api/monitor/start_process?name=mont4k-normal" target="_self" class="card-link">Start Mont4k</a></li> -->
+                    <li class="list-group-item"><a href="http://localhost:2400/api/monitor/start_process?name=mont4k-normal" target="_self" class="card-link">Start Mont4k Example</a></li>
                 </ul>
                 <h4 class="card-title mt-2">Links</h4>
                 <p>The links below point to useful information relating to observing.</p>
                 <ul class="list-group">
                     <li class="list-group-item"><a href="https://azcam.readthedocs.io" target="_self" class="card-link">AzCam Software</a></li>
+                    <li class="list-group-item"><a href="http://localhost:{{webport}}/docs" target="_self" class="card-link">API Reference</a></li>
                 </ul>
             </div>
         </div>
